1999-02-15  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driverio.c (startup_tape_process): new taper_program
	argument.
	* server-src/driverio.h: remove declaration of taper_program.
	* server-src/driver.c (main): declare taper_program.
	* server-src/driver.c: call startup_tape_process with the new 
	taper_program argument.
	* server-src/amflush.c (run_dumps): declare taper_program.
	* server-src/amflush.c (run_dumps): call startup_tape_process with 
	the new taper_program argument.

1999-02-15  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driverio.c (startup_dump_process, startup_dump_processes):
	new dumper_program argument.
	* server-src/driverio.h: remove declaration of dumper_program.
	* server-src/driver.c: declare dumper_program.
	* server-src/driver.c: call startup_dump_process and
	startup_dump_processes with the new dumper_program argument.

1999-02-14  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/list_dir.h: remove global variable dir_list, declare
	new function get_dir_list.
	* server-src/list_dir.c (get_dir_list): new function to return dir_list.
	* server-src/amindexd.c (opaque_ls): use get_dir_list.

1999-02-14  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/holding.h: remove declaration of get_letter_from_user()
	and select_dir().
	* server-src/holding.c: remove function get_letter_from_user() and
	select_dir().
	* server-src/holding.c (pick_datestamp): return empty array instead
	of calling exit if no directory are found.
	* server-src/amflush.c (get_letter_from_user): new function copied
	from holding.c.
	* server-src/amflush.c (confirm): write a message and exit if no
	directory were found.

1999-02-14  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amflush.c (flush_holdingdisk): don't update the database
	when flushing a partial dump.

1999-02-14  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/holding.h (get_dumpfile): new function