@@ -25,7 +25,7 @@
  *			   University of Maryland at College Park
  */
 /*
- * $Id: driverio.h,v 1.15 1999/02/16 03:18:44 martinea Exp $
+ * $Id: driverio.h,v 1.16 1999/02/17 01:46:36 martinea Exp $
  *
  * driver-related helper functions
  */
@@ -96,7 +96,6 @@ GLOBAL int maxfd;
 GLOBAL fd_set readset;
 GLOBAL int taper, taper_busy, taper_pid;
 
-void addfd P((int fd));
 char *childstr P((int fd));
 void startup_tape_process P((char *taper_program));
 void startup_dump_process P((dumper_t *dumper, char *dumper_program));
